--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,8 @@
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL="file:./db.sqlite"
+# DATABASE_URL="file:./db.sqlite"
+DATABASE_URL="mysql://root:root@localhost:3306/issue-tracker"
 
 # Next Auth
 # You can generate a new secret on the command line with:
