--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next-auth": "^4.24.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.12.0",
     "react-markdown": "^9.0.1",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
